--- a/package.json
+++ b/package.json
@@ -8,32 +8,31 @@
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "co-express": "^2.0.0",
     "cookie-parser": "^1.4.3",
-    "pug": "^2.0.0-rc.1",
-    "cors": "^2.8.3",
-    "dotenv": "^4.0.0",
-    "express": "^4.15.3",
+    "pug": "^2.0.0",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.2",
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
+    "moment": "^2.21.0",
     "morgan": "^1.8.2",
-    "mysql": "^2.13.0",
+    "mysql": "^2.15.0",
     "random-js": "^1.0.8",
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.3",
     "@types/cookie-parser": "^1.3.30",
-    "@types/ejs": "^2.3.33",
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.11.1",
     "@types/jsonwebtoken": "^7.2.1",
-    "@types/knex": "0.0.53",
+    "@types/knex": "0.14.8",
     "@types/lodash": "^4.14.104",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.29",
+    "@types/node": "^9.4.6",
     "@types/serve-favicon": "^2.2.28",
     "typescript": "^2.7.2"
   }
