--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,6 @@ install:
   - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
-  - npm install -g typescript
 
 # Post-install test scripts.
 test_script:
@@ -16,7 +15,7 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - tsc
+  - npx tsc
 
 # Don't actually build.
 build: off
