--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - npx tsc
+  - npm run build
 
 # Don't actually build.
 build: off
