--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ install:
   - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
+  - npm install -g typescript
 
 # Post-install test scripts.
 test_script:
@@ -15,7 +16,7 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - npm run build
+  - cmd: tsc
 
 # Don't actually build.
 build: off
