--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - cmd: tsc
+  - tsc -p .
 
 # Don't actually build.
 build: off
