--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - npx tsc --project "C:\projects\mmis-management-backend"
+  - npx tsc %cd%
 
 # Don't actually build.
 build: off
