--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,14 @@
 # Test against the latest version of this Node.js version
+image: Visual Studio 2017
 environment:
   nodejs_version: "8"
-  matrix:
-    - TYPESCRIPT: typescript@2.7.1
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
-  - set path=%programfiles(x86)%\\Microsoft SDKs\TypeScript\2.2;%path%
   # install modules
   - npm install
-
 # Post-install test scripts.
 test_script:
   # Output useful info for debugging.
