--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,11 @@
 # Test against the latest version of this Node.js version
-image: Visual Studio 2017
+image:
+  - Visual Studio 2017
 environment:
   nodejs_version: "8"
-
+  matrix:
+    - TYPESCRIPT: typescript@2.7.1
+    
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
