--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,6 @@
 # Test against the latest version of this Node.js version
-image:
-  - Visual Studio 2017
 environment:
   nodejs_version: "8"
-  matrix:
-    - TYPESCRIPT: typescript@2.7.1
     
 # Install scripts. (runs after repo cloning)
 install:
@@ -18,7 +14,7 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - tsc --version
+  - npx tsc --version
 
 # Don't actually build.
 build: off
