--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,8 @@ test_script:
   - node --version
   - npm --version
   # run build
-  - npx tsc --version
+  - cmd: set path="C:\projects\mmis-management-backend\node_modules\typescript\bin";%PATH%
+  - cmd: echo %APPVEYOR_BUILD_FOLDER%
 
 # Don't actually build.
 build: off
