--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,8 +14,9 @@ test_script:
   - node --version
   - npm --version
   # run build
+  - npx tsc --version
   - cmd: set path="C:\projects\mmis-management-backend\node_modules\typescript\bin";%PATH%
-  - cmd: npx tsc %APPVEYOR_BUILD_FOLDER%
+  - cmd: npx tsc -p %APPVEYOR_BUILD_FOLDER%
 
 # Don't actually build.
 build: off
