--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,15 +8,16 @@ install:
   - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
+  - npm install -g typescript@2.7.2
 # Post-install test scripts.
 test_script:
   # Output useful info for debugging.
   - node --version
   - npm --version
   # run build
-  - npx tsc --version
-  - cmd: set path="C:\projects\mmis-management-backend\node_modules\typescript\bin";%PATH%
-  - cmd: npx tsc -p %APPVEYOR_BUILD_FOLDER%
+  - tsc --version
+  #- cmd: set path="C:\projects\mmis-management-backend\node_modules\typescript\bin";%PATH%
+  - cmd: tsc -p %APPVEYOR_BUILD_FOLDER%
 
 # Don't actually build.
 build: off
