--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "npx tsc",
-    "start": "node app/bin/www.js"
+    "start": "npx nodemon",
+    "start:dist": "node app/bin/www.js",
+    "build:watch": "npx tsc -w",
+    "build": "npx tsc"
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
@@ -34,6 +36,8 @@
     "@types/morgan": "^1.7.32",
     "@types/node": "^9.4.6",
     "@types/serve-favicon": "^2.2.28",
+    "nodemon": "^1.17.2",
+    "ts-node": "^6.0.2",
     "typescript": "^2.7.2"
   }
 }
