--- a/package.json
+++ b/package.json
@@ -10,34 +10,37 @@
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "co-express": "^2.0.0",
     "cookie-parser": "^1.4.3",
-    "pug": "^2.0.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
+    "fs-extra": "^6.0.1",
     "jsonwebtoken": "^7.4.1",
-    "knex": "^0.13.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.21.0",
+    "knex": "^0.14.6",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "morgan": "^1.8.2",
     "mysql": "^2.15.0",
+    "mysqldump": "^1.4.2",
+    "pug": "^2.0.3",
     "random-js": "^1.0.8",
-    "serve-favicon": "^2.4.1"
+    "rimraf": "^2.6.2",
+    "serve-favicon": "^2.5.0",
+    "shelljs": "^0.8.2"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.3",
     "@types/cookie-parser": "^1.3.30",
     "@types/express": "^4.11.1",
-    "@types/jsonwebtoken": "^7.2.1",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/knex": "0.14.8",
-    "@types/lodash": "^4.14.104",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^9.4.6",
+    "@types/node": "^9.6.18",
     "@types/serve-favicon": "^2.2.28",
     "nodemon": "^1.17.2",
     "ts-node": "^6.0.2",
-    "typescript": "^2.7.2"
+    "typescript": "^2.8.3"
   }
 }
