--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysqldump": "^1.4.2",
     "pug": "^2.0.3",
     "random-js": "^1.0.8",
+    "request": "^2.88.0",
     "rimraf": "^2.6.2",
     "serve-favicon": "^2.5.0",
     "shelljs": "^0.8.2"
